# brentbutkow.me-backend

./: .dockerignore  .env.example  .env.render.tpl  .env.tpl  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  constraints.txt  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: frontend-design-reminder.mjs
.githooks/: pre-commit
.github/workflows/: ci.yml  ingest.yml  run-script.yml
alembic/: env.py
alembic/versions/: 4df6eda8bdfa_initial_schema.py  9f8e7d6c5b4a_add_recall_analytics_builds.py  a1f2b3c4d5e6_add_recall_indexes.py  a2b3c4d5e6f7_add_dispatch_state_table.py  a7b8c9d0e1f2_add_recall_entities.py  a8b9c0d1e2f3_add_recall_severity.py  a9b8c7d6e5f4_add_slug_to_recall_topics.py  b1c2d3e4f5a6_add_recall_events.py  b2c3d4e5f6a7_add_recall_search.py  b3c4d5e6f7a8_add_recall_trgm.py  b9c0d1e2f3a4_add_recall_analytics.py  c0d1e2f3a4b5_rename_severity_elevated_to_moderate.py  c1d2e3f4a5b6_add_subscription_pending_update.py  c2d3e4f5a6b7_add_recall_stats_cache.py  c3d4e5f6a7b8_add_messages_table.py  c4d5e6f7a8b9_subscriptions_unique_email.py  cffe2116d048_add_nullspace_scores_table.py  d1e2f3a4b5c6_add_country_to_recall_topics.py  d3e4f5a6b7c8_drop_non_us_states_from_recalls.py  d4e5f6a7b8c9_add_message_bot_flag.py  d5e6f7a8b9c0_add_message_seen_flag.py  e1f2a3b4c5d6_add_subscriptions_table.py  f6a7b8c9d0e1_add_country.py  (+2 more)
app/: auth.py  camel.py  config.py  db.py  main.py  rate_limit.py
scripts/: _common.py  anomaly_methodology.py  backfill.py  backfill_all.py  backfill_entities.py  backfill_fda.py  backfill_html_decode.py  backfill_severity.py  build_analytics.py  build_events.py  build_stats.py  forecast_methodology.py  ingest.py  ingest_all.py  ingest_cfia.py  ingest_fda.py  ingest_fsis.py  ingest_ncc.py  ingest_seed.py  ingest_uk.py  reclassify.py  train_classifier.py
tests/: conftest.py  test_admin.py  test_analytics.py  test_anomalies.py  test_backfill_all.py  test_categorize.py  test_cfia_ca.py  test_classifier.py  test_contact.py  test_contact_service.py  test_cors.py  test_dispatcher_properties.py  test_email.py  test_entities.py  test_events.py  test_forecast.py  test_fsa_uk.py  test_fsis.py  test_matcher_properties.py  test_ncc_za.py  test_nullspace.py  test_openfda.py  test_routes.py  test_security.py  test_seed_za.py  test_service.py  test_severity.py  test_subscription_service_properties.py  test_subscriptions_routes.py  test_subscriptions_uniqueness.py  test_token_properties.py
(+48 files in other folders)
