[project]
name = "brentbutkow-me-backend"
version = "0.1.0"
description = "General-purpose backend for brentbutkow.me — Recall Radar food-recall API plus future site modules."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.9",  # the [email] extra (email-validator) backs schemas' EmailStr
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "slowapi>=0.1.9",
    "alembic>=1.13",
    "resend>=2.0",
    "numpy>=2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7", "mypy>=1.13", "pre-commit>=3.7"]
# Offline only — scripts/anomaly_methodology.py uses STL to validate the runtime z-score detector.
# Never imported by the app, so the deploy build stays light. Install with: pip install -e '.[ml]'.
ml = ["statsmodels>=0.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # FastAPI uses Depends()/Query()/Header() in argument defaults

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
